# curl-java

./: .gitignore  ChangeLog  CurlIO.java  CurlRead.java  CurlWrite.java  MANIFEST  Makefile  Makefile.am  Makefile.m32  Makefile.netware  Makefile.unix  README  acinclude.m4  buildconf  configure.ac  curljava.c  define2java.pl  javacurl.c  nwlib.c  test.java
